Threadz-V1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: threadz-backend-service
spec:
  selector:
    app: threadz-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: threadz-frontend-service
spec:
  selector:
    app: threadz-frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: threadz-redis-service
spec:
  selector:
    app: threadz-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
